--- a/recipes.html
+++ b/recipes.html
@@ -29,9 +29,10 @@
     <section id="home" class="recipes">
         <div class="container">
             <h2>Recipes</h2>
+            <p>Welcome to our Recipe Collection, where we believe that healthy eating should be delicious and accessible to everyone. Our food website is dedicated to providing a variety of vegan and non-vegan meals for breakfast, lunch, snacks, and dinner. We understand that dietary preferences and nutritional needs vary, so we offer a diverse range of recipes that cater to all. Whether you are looking for a hearty vegan breakfast, a light lunch, a savory snack, or a satisfying dinner, our recipes are crafted to ensure you can enjoy healthy, flavorful meals throughout the day. Explore our collection and discover the joy of cooking with wholesome ingredients that nourish your body and delight your taste buds.</p>
             <div class="recipe-grid">
                 <a href="breakfast.html" class="recipe-category">
-                    <img src="breakfast.jpeg" alt="Breakfast">
+                    <img src="breakfast.jpg" alt="Breakfast">
                     <h3>Breakfast Recipes</h3>
                 </a>
                 <a href="lunch.html" class="recipe-category">
@@ -53,8 +54,8 @@
         <div class="container">
             <h2>About Us</h2>
             <p>Welcome to our Recipe Collection! We are passionate about food and sharing our favorite recipes with the world. Our collection includes a variety of breakfast, lunch, snack, and dinner recipes, both vegan and non-vegan, to cater to all dietary preferences.</p>
-            <h3>Our Mission</h3>
-            <p>Our mission is to inspire home cooks to create delicious and nutritious meals for themselves and their loved ones. We believe that cooking should be fun, accessible, and enjoyable for everyone.</p>
+            <h3>Our Story</h3>
+            <p>Our journey began in a small family kitchen, where the aroma of freshly prepared meals brought everyone together. Growing up in a family that cherished home-cooked meals, we learned the importance of wholesome ingredients and the joy of sharing food with loved ones. As we experimented with different cuisines and flavors, we realized the need for accessible, healthy meal options that everyone could enjoy. This passion led us to create our Recipe Collection, a platform where we can share our love for cooking and inspire others to create delicious, nutritious meals. Our mission is to make healthy eating enjoyable and accessible, so we've curated a diverse range of recipes that cater to various dietary needs and preferences. Join us on this culinary adventure, and let's make every meal a celebration of good food and good health.</p>
         </div>
     </section>
     <section id="testimonials" class="testimonials">
